--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -217,7 +216,7 @@
               email: document.getElementById("email").value,
               password: document.getElementById("password").value,
               gpa: 0,
-              createdByAdmin: 1,
+              createdByAdmin: true,
             }),
           });
 
